reset password added and some improvments done

--- a/AttarStore.Api/appsettings.json
+++ b/AttarStore.Api/appsettings.json
@@ -14,5 +14,12 @@
   "JWT": {
     "key": "fksdbgfnfn464464jhmhmhm467587988900909mjjhk,hg,kghkmgfjdskjggkk",
     "Issuer": "AttarStore.sy"
+  },
+  "Smtp": {
+    "Host": "smtp.office365.com",
+    "Port": "587",
+    "Username": "alshelhawi@wmotors.ae",
+    "Password": "A2683936a@.",
+    "FromEmail": "alshelhawi@wmotors.ae"
   }
 }
