--- a/AttarStore.Api/AttarStore.Api.csproj
+++ b/AttarStore.Api/AttarStore.Api.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\AttarStore.Services\AttarStore.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
