Client role added and some improvments on all repos and login have been done

--- a/AttarStore.Api/appsettings.json
+++ b/AttarStore.Api/appsettings.json
@@ -12,8 +12,10 @@
     //"dev": "Server=tcp:82.137.225.171,1433;User Id=sa;Password=11;Encrypt=false;Initial Catalog=AttarStore_Db_dev;"
   },
   "JWT": {
-    "key": "fksdbgfnfn464464jhmhmhm467587988900909mjjhk,hg,kghkmgfjdskjggkk",
-    "Issuer": "AttarStore.sy"
+    "Key": "fksdbgfnfn464464jhmhmhm467587988900909mjjhk",
+    "Issuer": "AttarStore",
+    "Audience": "AttarStoreUsers",
+    "ExpiresInMinutes": 60
   },
   "Smtp": {
     "Host": "smtp.office365.com",
