auth updated to use cookies

--- a/AttarStore.Api/appsettings.json
+++ b/AttarStore.Api/appsettings.json
@@ -12,10 +12,11 @@
     //"dev": "Server=tcp:82.137.225.171,1433;User Id=sa;Password=11;Encrypt=false;Initial Catalog=AttarStore_Db_dev;"
   },
   "JWT": {
-    "Key": "fksdbgfnfn464464jhmhmhm467587988900909mjjhk",
-    "Issuer": "AttarStore",
-    "Audience": "AttarStoreUsers",
-    "ExpiresInMinutes": 60
+    "Key": "YOUR_SUPER_SECRET_KEY_HEREbfdbrdngdfgrsdvgsdbrfdww",
+    "Issuer": "https://your-api.example.com",
+    "Audience": "https://your-client.example.com",
+    "AccessTokenMinutes": 1,
+    "RefreshTokenDays": 1
   },
   "Smtp": {
     "Host": "smtp.office365.com",
